[tool.poetry]
name = "mathquestiongenerator"
version = "0.1.0"
description = ""
authors = ["Yucheng"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9"
openai = "^1.10.0"
langchain = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
